issue-9: Added Maven modular sample for IntelliJ